--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "dev": "tailwindcss -i ./assets/input.css -o ./assets/output.css --watch",
-    "min-css": "tailwindcss -i ./assets/input.css -o ./dist/assets/output.css --minify",
+    "min-css": "tailwindcss -i ./assets/input.css -o ./assets/output.css --minify",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
